--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "simulate": "node simulate/simulate.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,10 @@
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.5",
     "validator": "^13.11.0",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "geolib": "^3.3.3",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "axios": "^1.4.0"
   }
 }
