--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "simulate": "node simulate/simulate.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1687.0",
-    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.6",
@@ -23,12 +21,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "finalhandler": "^1.3.1",
-    "geolib": "^3.3.4",
-    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^7.0.0",
     "mongoose": "^7.4.5",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
